--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,52 @@ Paleta de  Cores
 Verde: #49a09d
 Lilás: #5f2c82
 */
+
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: #5f2c82;
+    width: 100vw;
+    height: 100vh;
+}
+
+main {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px black;
+
+    transition: width .3s, height 0.3s;
+    transition-timing-function: ease;
+}
+
+section#login > div#imagen {
+    display: block;
+    background: #5f2c82 url(../imagens/scott-webb.jpg) no-repeat;
+    background-size: cover;
+    background-position: left bottom;
+    height: 200px;
+}
+
+section#login > div#formulario {
+    display:block;
+    padding: 10px;
+}
